<?xml version="1.0"?>
<package>
    <name>robotics_math</name>
    <version>0.0.2</version>
    <description>Math library for robotics application</description>

    <maintainer email="texnoman@itmo.ru">Texno Man</maintainer>

    <license>GPLv3</license>

    <author email="texnoman@itmo.ru">Texno Man</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_depend>kdl_parser</build_depend>
    <build_depend>orocos_kdl</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslint</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>eigen3</build_depend>

    <run_depend>std_msgs</run_depend>


</package>